@@ -15,7 +15,7 @@
 namespace Marvel {
 
 	bool        UnloadTexture       (const std::string& filename);
-	bool        LoadTextureFromArray(const char* name, float* data, unsigned width, unsigned height, mvTexture& storage);
+	bool        LoadTextureFromArray(const char* name, float* data, unsigned width, unsigned height, mvTexture& storage, mvTextureFormat format);
 	bool        LoadTextureFromFile (const char* filename, mvTexture& storage);
 	void        FreeTexture         (mvTexture& storage);
 
