@@ -31,3 +31,5 @@ It's mostly a bunch of personal notes, probably incomplete. Feel free to query i
 - layout: group has no height attribute which would be useful for when the group is set to horizontal
 
 - memory: replace raw pointers with safe pointers
+
+- add_texture: fix alpha channel mess
